feat(frontend): expand linear CFG value-op lowering
- recursively lower linear executable-body expressions into explicit call/member/subscript/assignment items
- thread compile-ready analysis data through CFG building and validate published semantic facts
- record operand and anchor metadata on CFG items so later lowering preserves source evaluation order
- refresh frontend lowering docs and tests for the explicit operand/result contract